@@ -9,6 +9,7 @@ Mark "!": change that can break compatibility with older version
 version 5.4.0 2015/12/?
 ========================
 o Add Nehan::Document.
+o Add new callback 'onPage', 'onTree'(onTree is alias for onProgress).
 o Refine whole structure.
 
 version 5.3.4 2015/10/26
